fix!: solve compilation errors caused by API changes in Smooks 2

--- a/src/main/java/org/smooks/cartridges/templating/stringtemplate/reporting/StringTemplateTemplateProcessor_After.html
+++ b/src/main/java/org/smooks/cartridges/templating/stringtemplate/reporting/StringTemplateTemplateProcessor_After.html
@@ -45,4 +45,4 @@
 <#else>
     Applied <a href="http://www.stringtemplate.org/">StringTemplate</a> Template <b>${resource.resource}</b>.
 </#if>
-Templating action: <b>${resource.parameters.action!'replace'}</b>.
+Templating action: <b>${resource.parameters.action!'REPLACE'}</b>.
